Tue Dec 30 18:23:10 2008  Ryan Davis  <ryand-ruby@zenspider.com>

	* lib/minitest/*.rb: Imported minitest 1.3.1 r4506.
	* test/minitest/*.rb: ditto.

Tue Dec 30 17:59:59 2008  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* transcode.c: Minor fixes and tweaks in documentation.

Tue Dec 30 17:03:51 2008  Koichi Sasada  <ko1@atdot.net>

	* ext/dl/test/test_import.rb: fix a prototype decl.
	  pointed out by Takehiro Kubo [ruby-core:20971].

Tue Dec 30 16:56:09 2008  Koichi Sasada  <ko1@atdot.net>

	* thread.c (rb_thread_blocking_region): add a comment.

	* thread.c (rb_thread_call_without_gvl): added as a alias of
	  rb_thread_blocking_region().

	* thread.c (rb_thread_call_with_gvl): added.

	* vm_core.h (rb_thread_t#blocking_region_buffer): added for
	  rb_thread_call_with_gvl().

Mon Dec 29 23:41:42 2008  Koichi Sasada  <ko1@atdot.net>

	* ext/dl/test/test_base.rb: add libc search logic.
	  this patch is written by Takehiro Kubo.
	  [ruby-core:20963] [Bug #932]

	* ext/dl/dl.h: Add ",..." as the last argument.
	  this patch is written by Takehiro Kubo.
	  Bug #633 [ruby-core:19289]

	* ext/dl/lib/dl/stack.rb: add add_padding() to calculate
	  alignment.  this patch is written by Takehiro Kubo.
	  Bug #633 [ruby-core:19289]

	* ext/dl/test/test_func.rb: atof()'s return value is double.
	  this patch is written by Takehiro Kubo.
	  Bug #633 [ruby-core:19289]

	* ext/dl/test/test_import.rb:
	  - atof()'s return value is double.
	  - The types of qsort's second and third argument are size_t.
	  - fprintf()'s return value is int.
	  this patch is written by Takehiro Kubo.
	  Bug #633 [ruby-core:19289]

Mon Dec 29 22:37:17 2008  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* process.c (rb_waitpid): retries waitpid when EINTR.
	  [ruby-core:19744].

Mon Dec 29 23:18:52 2008  Tadayoshi Funaba  <tadf@dotrb.org>

	* bignum.c (rb_cstr_to_inum): changed an error message.

	* complex.c (string_to_c_strict): ditto.

	* rational.c (string_to_r_strict): ditto.
